kubernetes/mybackendlb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mybackendlb-deployment
  labels:
    app: app
    component: backend

spec:
  template:
    metadata:
      name: mybackendlb-pod
      labels:
        component: backend
        app: app
    spec:
      containers:
        - name: mybackendlb-container
          image: kickd/mybackend:latest
  replicas: 3
  selector:
    matchLabels:
      app: app
      component: backend
