kubernetes/myfrontend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
    name: myfrontend-deployment
    labels:
        app: app
        component: frontend

spec:
    template:
        metadata:
            name: myfrontend-pod
            labels:
                app: app
                component: frontend

        spec:
            containers:
                - name: myfrontend-container
                  image: kickd/myfrontend:latest
                  stdin: true

    replicas: 3
    selector:
        matchLabels:
            app: app
            component: frontend
