kubernetes/myredis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myredis-deployment
  labels:
    app: app
    type: cache

spec:
  template:
    metadata:
      name: myredis-pod
      labels:
        app: app
        type: cache
    spec:
      containers:
        - name: myredis-container
          image: redis:alpine
  replicas: 3
  selector:
    matchLabels:
      app: app
      type: cache
