kubernetes/mybackendlb-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybackendlb-node-port
  
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 31100
  selector:
    component: backend
    app: app
