kubernetes/mypostgres-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: mypostgres-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432

  selector:
    type: db
